click to download done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="invoice">
-        <h1 style="text-align: center;">Dwonload Pdf file</h1>
+        <h1 style="text-align: center;">Download Pdf file</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione cumque consectetur ipsum nihil beatae ipsam quae rem. Quam voluptatem deserunt voluptas ea obcaecati explicabo ullam fuga error ipsum? Architecto consequuntur ut aut officiis eaque ex possimus deleniti. Non harum quos, cum numquam maiores recusandae nisi ducimus nam? Quasi cum deserunt vero consequuntur nulla facere culpa doloribus nihil officia illum ipsam, provident necessitatibus. Aliquid dolorem molestias, vel impedit totam aut vitae iure rem sed tenetur molestiae repudiandae praesentium minima in asperiores quo amet adipisci incidunt ea fugiat quis. Nisi, culpa quis. Itaque iste debitis ducimus asperiores, eveniet voluptate perspiciatis ratione? Nobis.</p>
     </div>
     <button  id="download">Dwonload</button>
